--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,14 @@ version: '3'
 services:
   victim:
     build:
-      context: ..
+      context: .
       dockerfile: victim/Dockerfile
     volumes:
-      - ..:/workspace
+      - .:/workspace
     # other service-specific configurations
   scanner:
     build:
-      context: ..
+      context: .
       dockerfile: scanner/Dockerfile
     volumes:
-      - ..:/workspace
+      - .:/workspace
