--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,12 +1,12 @@
 {
-  "name": "Computer Systems Security nmpap lab",
-  "service": "victim",
-  "workspaceFolder": "/workspace",
-  "extensions": [
-    "ms-vscode.cpptools",
-    "ms-vscode.cmake-tools"
-  ],
-  "settings": {
-    "terminal.integrated.shell.linux": "/bin/bash"
-  }
+    "name": "MyDevContainer",
+    "dockerComposeFile": [
+        "../docker-compose.yml"
+    ],
+    "service": "victim",
+    "workspaceFolder": "/workspace",
+    "settings": {
+        "terminal.integrated.shell.linux": "/bin/bash"
+    },
+    "extensions": []
 }
