Add "image": "ryantolboom/hash"

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,6 +8,6 @@
     "settings": {
         "terminal.integrated.shell.linux": "/bin/bash"
     },
-    "extensions": []
+    "extensions": [],
+    "image": "ryantolboom/hash"
 }
-
